edit all
