# api/api/openapi.yaml
@@ -42,6 +42,12 @@ paths:
     $ref: './paths/follows.yaml#/follows_user_follow_id'
   /follows/{user_id}/{follow_id}/check:
     $ref: './paths/follows.yaml#/follow_check'
+  /follows/request:
+    $ref: './paths/follows.yaml#/follow_request'
+  /follows/request/{follow_id}:
+    $ref: './paths/follows.yaml#/follow_request_by_follow'
+  /follow/request/{user_id}/{follow_id}:
+    $ref: './paths/follows.yaml#/follow_request_by_user_follow'
   /followers/{user_id}:
     $ref: './paths/followers.yaml#/followers'
   /goods:
@@ -67,6 +73,8 @@ components:
       $ref: './schemas/follow.yaml#/Follow'
     Follows:
       $ref: './schemas/follow.yaml#/Follows'
+    FollowStatus:
+      $ref: './schemas/follow.yaml#/Follow_Status'
     Good:
       $ref: './schemas/good.yaml#/Good'
     Goods:
